<resources>
    <string name="app_name">GastoViagem</string>
    <string name="distance">Distância</string>
    <string name="total_quilometers">Total de quilimetros</string>
    <string name="price">Preço</string>
    <string name="autonomy">Autonomia</string>
    <string name="total_spent">Seu gasto total será de:</string>
    <string name="valor">R$ 0</string>
    <string name="price_per_liter">Preço por litro</string>
    <string name="km_per_liter">km por litro</string>
    <string name="calculate">calcular</string>
    <string name="validation_fill_all_fields">Preencha todos os campos</string>

</resources>